--- a/src/app/modules/account/feature/login/login.component.html
+++ b/src/app/modules/account/feature/login/login.component.html
@@ -13,7 +13,7 @@
           <input matInput type="password" placeholder="Password" />
         </mat-form-field>
 
-        <button mat-raised-button color="custom">Login</button>
+        <button mat-raised-button class="bg-c-dark-b">Login</button>
       </form>
     </div>
   </div>
