--- a/src/assets/scss/default-theme.scss
+++ b/src/assets/scss/default-theme.scss
@@ -1,6 +1,6 @@
-@import "partials/color";
-@import "partials/mixin";
-@import "partials/palette";
+@import "partial/color";
+@import "partial/mixin";
+
 body{
     margin: 0;
     padding: 0;
